<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameRaven</string>
    <string name="gameraven">GameRaven</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="firstpage">&lt;&lt;</string>
    <string name="prevpage">&lt;</string>
    <string name="lastpage">>></string>
    <string name="nextpage">></string>
    <string name="title">Title</string>
    <string name="titlecounter">80/80</string>
    <string name="body">Body</string>
    <string name="boldtag">&lt;b></string>
    <string name="italictag">&lt;i></string>
    <string name="codetag">&lt;code></string>
    <string name="spoilertag">&lt;sp></string>
    <string name="citetag">&lt;cite></string>
    <string name="quotetag">&lt;qu></string>
    <string name="bodycounter">4096/4096</string>
    <string name="cancel">Cancel</string>
    <string name="poll">Poll...</string>
    <string name="post">Post</string>
    <string name="logged_in_as">Logged In As...</string>
    <string name="change_acc_default">Logged Out (click to change)</string>
    <string name="navigation">Navigation</string>
    <string name="board_jumper">Board Jumper</string>
    <string name="amp_list">AMP List</string>
    <string name="tracked_topics">Tracked Topics</string>
    <string name="pm_inbox">PM Inbox</string>
    <string name="pm_outbox">PM Outbox</string>
    <string name="functions">Functions</string>
    <string name="copy_curr_page">Copy Current Page URL</string>
    <string name="manage_highlight_list">Manage Highlight List</string>
    <string name="settings">Settings</string>
    <string name="bug_report">Bug Report</string>
    <string name="exit_gameraven">Exit GameRaven</string>
    <string name="search">Search</string>
    <string name="return_to_topic_list">Return to Topic List</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="post_new_">Post new...</string>
    <string name="reply">Reply</string>
    <string name="refresh">Refresh</string>
    <string name="last_post">Last\nPost</string>
    <string name="bug_toast_text">Bug encountered, collecting debug info...</string>
    <string name="crash_toast_text">GameRaven has crashed, collecting crash info...</string>
    <string name="crash_dialog_title">GameRaven has encountered an error</string>
    <string name="crash_dialog_text">An unexpected error has occurred. Sorry about that. Please help us fix this by sending in the debug data to the developer. All you have to do is click OK below.</string>
    <string name="crash_dialog_comment_prompt">You can also add your comments about the problem in the text box below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>

    <!-- Start Color Picker Strings -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Preferences -->
    <string name="pref_category">Category</string>
    <string name="color1_title">Color 1</string>
    <string name="color1_summary">black color by default, set by reference</string>
    <string name="color2_title">Color 2</string>
    <string name="color2_summary">not persistent color\nalpha slider added via code</string>
    <string name="color3_title">Color 3</string>
    <string name="color3_summary">picker with alpha slider</string>
    <string name="color4_title">Color 4</string>
    <string name="color4_summary">color set with HEX code in xml</string>
    <!-- End Color Picker Strings -->

</resources>
