<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dwrChangeAccHeader"
        android:title="@string/logged_in_as">
        <menu>
            <item
                android:id="@+id/dwrChangeAcc"
                android:title="@string/change_acc_default"/>
            <item
                android:id="@+id/dwrNotifications"
                android:title="@string/notification"/>
        </menu>
    </item>

    <item
        android:id="@+id/dwrNavHeader"
        android:title="@string/navigation">
        <menu>
            <item
                android:id="@+id/dwrBoardJumper"
                android:title="@string/board_jumper"/>
            <group
                android:id="@+id/dwrLoggedInNav">
                <item
                    android:id="@+id/dwrAMPList"
                    android:title="@string/amp_list"/>
                <item
                    android:id="@+id/dwrTrackedTopics"
                    android:title="@string/tracked_topics"/>
                <item
                    android:id="@+id/dwrPMInbox"
                    android:title="@string/pm_inbox"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/dwrFuncHeader"
        android:title="@string/functions">
        <menu>
            <item
                android:id="@+id/dwrCopyCurrURL"
                android:title="@string/copy_curr_page"/>
            <item
                android:id="@+id/dwrHighlightList"
                android:title="@string/manage_highlight_list"/>
            <item
                android:id="@+id/dwrSettings"
                android:title="@string/settings"/>
            <item
                android:id="@+id/dwrExit"
                android:title="@string/exit_gameraven"/>
        </menu>
    </item>
</menu>